# push_to_talk

./: .gitignore  CHANGELOG.md  README.md  __init__.py  blender_manifest.toml  pyproject.toml
.github/: FUNDING.yml
atunc/: README.md
atunc/src/: LICENSE  main.swift
dev/: linux_arecord_list_devices.txt  linux_arecord_list_pcms.txt  linux_proc_asound_cards.txt  windows_dshow_devices.txt
