[tool.poetry]
name = "blender_addon_push_to_talk"
version = "0.2.0"
description = "Record audio in the Blender VSE."
authors = ["Inês Almeida <britalmeida@gmail.com>", "Francesco Siddi <francesco@blender.org>"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
target_version = ['py37']
skip_string_normalization = true
